RESOLVED FIXED80274
[BlackBerry] DOMSupport visibleSelectionForRangeInputElement incorrectly dereferences a null range.
https://bugs.webkit.org/show_bug.cgi?id=80274
Summary [BlackBerry] DOMSupport visibleSelectionForRangeInputElement incorrectly dere...
Mike Fenton
Reported 2012-03-05 05:58:45 PST
In visibleSelectionForRangeInputElement, TextIterator::rangeFromLocationAndLength can return 0, as such the selectionRange should not be used.
Attachments
Patch by George (2.20 KB, patch)
2012-03-05 06:05 PST, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-03-05 06:05:12 PST
Created attachment 130106 [details] Patch by George
WebKit Review Bot
Comment 2 2012-03-05 07:37:41 PST
Comment on attachment 130106 [details] Patch by George Clearing flags on attachment: 130106 Committed r109747: <http://trac.webkit.org/changeset/109747>
WebKit Review Bot
Comment 3 2012-03-05 07:37:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.