[BlackBerry] DOMSupport visibleSelectionForRangeInputElement incorrectly dereferences a null range. https://bugs.webkit.org/show_bug.cgi?id=80274

Patch by George Staikos <gstaikos@rim.com> on 2012-03-05
Reviewed by Antonio Gomes.

A null range can be returned so we should not blindly deref it.
Reviewed Internally by Mike Fenton.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::visibleSelectionForRangeInputElement):

Canonical link: https://commits.webkit.org/97408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109747 268f45cc-cd09-0410-ab3c-d52691b4dbfc